dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=Ltecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=Ltecoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=Ltecoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=Ltecoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=Ltecoin-wallet.1
endif
endif
